# notion-backup

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  notion-backup-auto.sh  notion_backup.conf.example  pyproject.toml
notion_backup/: backup_service.py  configuration_service.py  notion_client.py
