[tool.poetry]
name = "notion-backup"
version = "0.3.5"
description = "Notion workspace export automation tool"
authors = ["Ligohu <ligohu@outlook.fr>"]
readme = "README.md"
repository = "https://github.com/HugoLime/notion-backup"

[tool.poetry.dependencies]
python = ">=3.8.5"
requests = ">=2.23.0"
backoff = ">=1.10.0"
prompt_toolkit = ">=3.0.5"
tqdm = ">=4.46.0"
click = ">=7.1.2"

[tool.poetry.dev-dependencies]
black = ">=19.10b0"

[tool.poetry.scripts]
backup_notion = 'notion_backup.backup_service:main'


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
